--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -40,7 +40,7 @@ button, li {
 }
 .register-wrapper {
   height: 100vh;
-  background: #f8f9fa; // light gray background
+  background: #f8f9fa;  
   display: flex;
   justify-content: center;
   align-items: center;
