auth guard changes

--- a/src/assets/styles/navbar.scss
+++ b/src/assets/styles/navbar.scss
@@ -128,6 +128,10 @@
             cursor: pointer;
         }
 
+        .fa-user {
+            font-size: 20px;
+        }
+
         .navbar-item a.active {
             color: #007bff;
             /* highlight color */
